Added images to per style

--- a/wdd130/burglocales/site-plan.html
+++ b/wdd130/burglocales/site-plan.html
@@ -9,8 +9,8 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
+      <h1>Burg Locales Site Plan</h1>
+      <h2>Daniel Checketts</h2>
       <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
@@ -30,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="./images/logos/centered-burglocales-logo-blacktransparent.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -61,10 +61,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Source Sans Pro  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Lato  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Food <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Activities  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +124,78 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Don't know what to do on a Saturday? <br>
+        There's plenty of places for activities and food.
+        <br>
+        <br>
+        Food <br>
+        Hungry? There's a wide variety of resturants to visit! <br>
+        [Feed Me!]
+        <br>
+        <br>
+        Activities <br>
+        Bored? There's so much to do, if you know where to look! <br>
+        [Excelcior!]
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <p>Image for the Home page</p>
+        <img class="imager" src="./images/food.jpg" alt="image for homepage">
+        <img class="imager" src="./images/activities.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Food</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Resturants
+        <br>
+        <br>
+        Fresco <br>
+        A menu of modern pizza and pasta. <br>
+        1181 S Yellowstone Hwy, Rexburg, ID 83440 <br>
+        [Image]
+        <br>
+        <br>
+        Subway <br>
+        Reliable custom sub sandwiches with short lines. <br>
+        383 S 2nd St W A, Rexburg, ID 83440 <br>
+        [Image]
+        <br>
+        <br>
+        Chick-Fil-A <br>
+        A menu of chicken based food and good lemonade. <br>
+        101 E Viking Drive MC 232A Brigham Young University, Rexburg, ID 83460 <br>
+        [Image]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img class="imager" src="./images/fresco.png" alt="image for page">
+        <img class="imager" src="./images/subway.jpg" alt="image for page">
+        <img class="imager" src="./images/chickfila.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Activities</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Activities
+        <br>
+        <br>
+        Skiing <br>
+        Winter activity at the Outdoor Resource Center. <br>
+        STA, BYU Idaho Stadium, 73 W 2nd S, Rexburg, ID 83460 <br>
+        [Image]
+        <br>
+        <br>
+        Fencing <br>
+        Swords. 7:00-9:00pm <br>
+        Hart 210 Tue. Hart 235 Sat. <br>
+        [Image]
+        <br>
+        <br>
+        Gravity Factory <br>
+        Trampoline park. <br>
+        165 Airport Rd, Rexburg, ID 83440 <br>
+        [Image]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img class="imager" src="./images/orc.jpg" alt="image for page3">
+        <img class="imager" src="./images/fencing.jpg" alt="image for page3">
+        <img class="imager" src="./images/gravityfactory.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -160,19 +209,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img class="imager" src="./images/per-home.jpg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Food</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img class="imager" src="./images/per-food.jpg" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Activities</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img class="imager" src="./images/per-act.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
