--- a/wdd130/burglocales/site-plan.html
+++ b/wdd130/burglocales/site-plan.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Burg Locales Site Plan</h1>
       <h2>Daniel Checketts</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>WDD 130-01</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -50,7 +50,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#efefef]</td><td class="secondary">[#000000]</td><td class="accent1">[#5a4ae3]</td><td class="accent2">[#f61067]</td></tr>
+        <tr><td class="primary">[#efefef]</td><td class="secondary colored">[#000000]</td><td class="accent1">[#5a4ae3]</td><td class="accent2">[#f61067]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
