--- a/wdd130/burglocales/activities.html
+++ b/wdd130/burglocales/activities.html
@@ -5,44 +5,48 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Activities</title>
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
-    <header>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="./resturants.html">Food</a>
-            <a href="./activities.html">Fun</a>
-        </nav>
-    </header>
     <body>
-        <h1>Activities</h1>
-        <section>
-            <img src="./images/orc.jpg" alt="BYU-I ORC">
-            <div>
-                <h3>Skiing</h3>
-                <p>Winter activity at the Outdoor Resource Center.</p>
-                <p>STA, BYU Idaho Stadium, 73 W 2nd S, Rexburg, ID 83460</p>
-            </div>
-        </section>
-        <section>
-            <img src="./images/fencing.jpg" alt="Fencing">
-            <div>
-                <h3>Fencing</h3>
-                <p>Swords. 7:00-9:00pm</p>
-                <p>Hart 210 Tue. Hart 235 Sat.</p>
-            </div>
-        </section>
-        <section>
-            <img src="./images/gravityfactory.jpg" alt="Gravity Factory">
-            <div>
-                <h3>Gravity Factory</h3>
-                <p>Trampoline park.</p>
-                <p>165 Airport Rd, Rexburg, ID 83440</p>
-            </div>
-        </section>
+        <header>
+            <nav>
+                <img src="./images/logos/side-burglocales-logo-transparent.png" alt="Logo">
+                <a href="./index.html">Home</a>
+                <a href="./resturants.html">Food</a>
+                <a href="./activities.html">Fun</a>
+            </nav>
+        </header>
+        <main>
+            <h1>Activities</h1>
+            <section>
+                <img src="./images/orc.jpg" alt="BYU-I ORC">
+                <div>
+                    <h3>Skiing</h3>
+                    <p>Winter activity at the Outdoor Resource Center.</p>
+                    <p>STA, BYU Idaho Stadium, 73 W 2nd S, Rexburg, ID 83460</p>
+                </div>
+            </section>
+            <section>
+                <img src="./images/fencing.jpg" alt="Fencing">
+                <div>
+                    <h3>Fencing</h3>
+                    <p>Swords. 7:00-9:00pm</p>
+                    <p>Hart 210 Tue. Hart 235 Sat.</p>
+                </div>
+            </section>
+            <section>
+                <img src="./images/gravityfactory.jpg" alt="Gravity Factory">
+                <div>
+                    <h3>Gravity Factory</h3>
+                    <p>Trampoline park.</p>
+                    <p>165 Airport Rd, Rexburg, ID 83440</p>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>Burg Locales &copy; 2023</p>
+            <a href="./site-plan.html">Site Plan</a>
+            <a href="./contact-us.html">Contact Us</a>
+        </footer>
     </body>
-    <footer>
-        <p>Burg Locales &copy; 2023</p>
-        <a href="./site-plan.html">Site Plan</a>
-        <a href="./contact-us.html">Contact Us</a>
-    </footer>
 </html>
