--- a/wdd130/burglocales/index.html
+++ b/wdd130/burglocales/index.html
@@ -5,37 +5,37 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home - Burg Locales</title>
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
-    <header>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="./resturants.html">Food</a>
-            <a href="./activities.html">Fun</a>
-        </nav>
-    </header>
     <body>
-        <h1>Don't know what to do on a Saturday?</h1>
-        <p>There's plenty of places for activities and food.</p>
-        <section>
-            <img src="./images/food.jpg" alt="Resturant">
-            <div>
-                <h2>Food</h2>
-                <p>Hungry? There's a wide variety of resturants to visit!</p>
-                <a href="./resturants.html">Feed Me!</a>
-            </div>
-        </section>
-        <section>
-            <img src="./images/activities.jpg" alt="Activity">
-            <div>
-                <h2>Activities</h2>
-                <p>Bored? There's so much to do, if you know where to look!</p>
-                <a href="./activities.html">Excelcior!</a>
-            </div>
-        </section>
+        <header>
+            <nav>
+                <img src="./images/logos/side-burglocales-logo-transparent.png" alt="Logo">
+                <a href="./index.html">Home</a>
+                <a href="./resturants.html">Food</a>
+                <a href="./activities.html">Fun</a>
+            </nav>
+        </header>
+        <main class="home">
+            <h1>Don't know what to do on a Saturday?</h1>
+            <p>There's plenty of places for activities and food.</p>
+                <img src="./images/food.jpg" alt="Resturant">
+                <img src="./images/activities.jpg" alt="Activity">
+                <div>
+                    <h2>Food</h2>
+                    <p>Hungry? There's a wide variety of resturants to visit!</p>
+                    <a href="./resturants.html">Feed Me!</a>
+                </div>
+                <div>
+                    <h2>Activities</h2>
+                    <p>Bored? There's so much to do, if you know where to look!</p>
+                    <a href="./activities.html">Excelsior!</a>
+                </div>
+        </main>
+        <footer>
+            <p>Burg Locales &copy; 2023</p>
+            <a href="./site-plan.html">Site Plan</a>
+            <a href="./contact-us.html">Contact Us</a>
+        </footer>
     </body>
-    <footer>
-        <p>Burg Locales &copy; 2023</p>
-        <a href="./site-plan.html">Site Plan</a>
-        <a href="./contact-us.html">Contact Us</a>
-    </footer>
 </html>
