--- a/wdd130/burglocales/site-plan.html
+++ b/wdd130/burglocales/site-plan.html
@@ -135,7 +135,7 @@
         <br>
         Activities <br>
         Bored? There's so much to do, if you know where to look! <br>
-        [Excelcior!]
+        [Excelsior!]
       </p>
       <p>Image for the Home page</p>
         <img class="imager" src="./images/food.jpg" alt="image for homepage">
