--- a/wdd130/burglocales/contact-us.html
+++ b/wdd130/burglocales/contact-us.html
@@ -37,6 +37,27 @@
                         
                     <button type="submit">Send your message</button>  
                 </form>
+                <!-- Trigger/Open The Modal -->
+                <button id="myBtn">Open Modal</button>
+
+                <!-- The Modal -->
+                <div id="myModal" class="modal">
+
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <span class="close">&times;</span>
+                        <h2>Gee Thanks!</h2>
+                        </div>
+                        <div class="modal-body">
+                        <p>Thank you for taking a look at my site!</p>
+                        </div>
+                        <div class="modal-footer">
+                        <h3><3</h3>
+                        </div>
+                    </div>
+
+                </div>
             </main>
         <footer>
             <p>Burg Locales &copy; 2023</p>
@@ -60,5 +81,31 @@
             // add a class to move everything down so our message doesn't cover it.
             document.body.classList.toggle('moveDown');
         });
+
+        // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the button that opens the modal
+        var btn = document.getElementById("myBtn");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on the button, open the modal
+        btn.onclick = function() {
+        modal.style.display = "block";
+        }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+        modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+        }
     </script>
 </html>
