--- a/wdd130/burglocales/contact-us.html
+++ b/wdd130/burglocales/contact-us.html
@@ -38,7 +38,7 @@
                     <button type="submit">Send your message</button>  
                 </form>
                 <!-- Trigger/Open The Modal -->
-                <button id="myBtn">Open Modal</button>
+                <button id="myBtn"> Thanks, visitor!</button>
 
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
