--- a/wdd130/burglocales/resturants.html
+++ b/wdd130/burglocales/resturants.html
@@ -16,31 +16,26 @@
                 <a href="./activities.html">Fun</a>
             </nav>
         </header>
-        <main class="home">
+        <main class="sub">
             <h1>Resturants</h1>
-            <section>
                 <img src="./images/fresco.png" alt="Fresco">
                 <div>
                     <h3>Fresco</h3>
                     <p>A menu of modern pizza and pasta.</p>
                     <p>1181 S Yellowstone Hwy, Rexburg, ID 83440</p>
                 </div>
-            </section>
-            <section>
                 <img src="./images/subway.jpg" alt="Subway">
                 <div>
                     <h3>Subway</h3>
                     <p>Reliable custom sub sandwiches with short lines.</p>
                     <p>383 S 2nd St W A, Rexburg, ID 83440</p>
                 </div>
-            </section><section>
                 <img src="./images/chickfila.jpg" alt="Chick-Fil-A">
                 <div>
                     <h3>Chick-Fil-A</h3>
                     <p>A menu of chicken based food and good lemonade.</p>
                     <p>101 E Viking Drive MC 232A Brigham Young University, Rexburg, ID 83460</p>
                 </div>
-            </section>
         </main>
         <footer>
             <p>Burg Locales &copy; 2023</p>
