--- a/wdd130/burglocales/contact-us.html
+++ b/wdd130/burglocales/contact-us.html
@@ -31,7 +31,7 @@
                     </div>
 
                     <div>
-                        <label for="'msg">Message:</label>
+                        <label for="msg">Message:</label>
                         <textarea id="msg" name="user_message"></textarea>
                     </div>
                     
