--- a/mission/mission.html
+++ b/mission/mission.html
@@ -15,8 +15,9 @@
                 <h2>About Me</h2>
                 <p>Hi! I'm Elder Checketts. Here's a bit about me!</p>
                 <ul>
-                    <li>Likes to program</li>
+                    <li>Likes to program in Python, HTML and CSS</li>
                     <li>Likes reading fantasy and science fiction</li>
+                    <li>Built this page myself :D</li>
                 </ul>
             </div>
             <a href="https://missioncall.app/guess.html?token=LOZLSW">Guess Where I'll Be Called!</a>
