Mission Call Opened
Changed main site to be the page, made redirect from original mission page

--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
-<html lang="en-us"></html>
-<head>
-    <meta charset="utf-8" />
-    <title>Home</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/home-style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <li> <a class="active" href="index.html">Home</a></li>
-            <li class="dropdown">
-                <a href="./pages/assignments.html" class="dropbtn">Assignments</a>
-                <div class="dropdown-content">
-                <a href="./pages/aboutme.html">About Me</a>
-                <a href="./pages/wdd130/wwr/site-plan-rafting.html">RS Plan</a>
-                <a href="./pages/wdd130/wwr/index.html">Dry Oar</a>
-                </div>
-            </li>
-            <li class="dropdown">
-                <a href="./pages/updates.html" class="dropbtn">Updates</a>
-            <div class="dropdown-content">
-                <a href="./pages/updates.html">Version 1</a>
-                <a href="./pagesupdates.html">Version 2</a>
-            </div></li>
-            <li style="float:right"> <a href="./pages/aboutme.html">About</a></li>
-        </nav>
-    </header>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mission</title>
+        <link rel="stylesheet" href="./styles/style.css">
+    </head>
     <body>
-        <h1>Main Page</h1>
-        <p>Greetings! Feel free to take a look around. <br> This site was originally designed on desktop, but it works pretty well on mobile as is. (In my opinion)</p>
+        <div class="first">
+            <h1>Called To Serve</h1>
+            <img src="./mission/pre-mission.jpg" alt="Elder Checketts">
+            <div class="intro">
+                <p>Hi! I'm Elder Checketts. As a member of the Church of Jesus Christ of Latter-Day Saints, I have the chance to serve a mission where I will be sent to a place to teach people about what we believe and serve the people I meet.</p>
+            </div>
+            <div class="about">
+                <p>About me: </p>
+                <ul>
+                    <li>I like to program in Python, HTML, and CSS</li>
+                    <li>I like to read fantasy and science fiction</li>
+                    <li>I built this page myself :D</li>
+                </ul>
+            </div>
+        </div>
+        <div class="second">
+            <h1>I Got My Call!</h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Flag_of_Oregon.svg/1152px-Flag_of_Oregon.svg.png" alt="Flag of the State of Oregon">
+            <div class="call">
+                <p>"Dear Elder Checketts ... "</p>
+                <p>"You are assigned to labor in the Oregon Eugene Mission and will prepare to preach the gospel in the English language."</p>
+            </div>
+            <div class="oregon">
+                <p>About Oregon: </p>
+                <ul>
+                    <li>State Bird: Western Meadowlark</li>
+                    <li>State Flower: Oregon Grape</li>
+                    <li>State Mammal: American Beaver</li>
+                    <li>State Beverage: Milk</li>
+                    <li>State Food: Pear</li>
+                </ul>
+            </div>
+        </div>
+        <div class="fs">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdS-SB8bPBA1xlF6-nEy7FNo2mPxc2ns4rapYFC-csrTqeZ9A/viewform?embedded=true" width="640" height="407" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
     </body>
-    <footer>
-        
-    </footer>
-</body>
+</html>
