--- a/mission/mission.html
+++ b/mission/mission.html
@@ -8,22 +8,6 @@
         <link rel="stylesheet" href="./mission.css">
     </head>
     <body>
-        <main class="page">
-            <h1>Greetings!</h1>
-            <img src="./pre-mission.jpg" alt="Elder Checketts">
-            <div class="about">
-                <h2>About Me</h2>
-                <p>Hi! I'm Elder Checketts. Here's a bit about me!</p>
-                <ul>
-                    <li>Likes to program in Python, HTML and CSS</li>
-                    <li>Likes reading fantasy and science fiction</li>
-                    <li>Built this page myself :D</li>
-                </ul>
-            </div>
-            <a href="https://missioncall.app/guess.html?token=LOZLSW">Guess Where I'll Be Called!</a>
-            <div class="fs">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdS-SB8bPBA1xlF6-nEy7FNo2mPxc2ns4rapYFC-csrTqeZ9A/viewform?embedded=true" width="640" height="407" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            </div>
-        </main>
+        <meta http-equiv="refresh" content="0; ../index.html" />
     </body>
 </html>
