--- a/site-development/index.html
+++ b/site-development/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles2.css">
+    <link rel="stylesheet" href="/site-development/styles.css">
     <link rel="icon" type="image/svg+xml" href="/icons/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg">
+    <script src="/site-development/main.js" defer></script>
 </head>
 
 <body>
@@ -14,17 +15,7 @@
         <h1>Welcome!</h1>
     </header>
     <main>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/photos.html">Photos</a></li>
-                <li><a href="/projects.html">Projects</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="https://github.com/dchecketts" rel="noopener noreferrer" target="_blank">Github</a></li>
-                <a href="mailto:danielkchecketts@gmail.com">Contact</a>
-            </ul>
-        </nav>
+        <nav class="navigation"></nav>
         <p>Hi, and welcome to my site! Thanks for giving it a look. Feel free to poke around!</p>
     </main>
     <footer>
