--- a/index.html
+++ b/index.html
@@ -6,30 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" type="image/svg+xml" href="/icons/home_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg">
+    <script src="/main.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <nav class="vertical-menu">
-            <div class="toppers">
-                <a href="/index.html" title="Home" class="active">Home</a>
-                <a href="/blog.html" title="Blog">Blog</a>
-                <a href="/photos.html" title="Photos">Photos</a>
-                <a href="/projects.html" title="Projects">Projects</a>
-                <a href="/about.html" title="About">About</a>
-            </div>
-            <div class="bottom">
-                <a href="https://github.com/dchecketts" rel="noopener noreferrer" target="_blank">Github</a>
-                <a href="mailto:danielkchecketts@gmail.com">Contact</a>
-            </div>
-            
-        </nav>
-
-        <main>
-            <h1>Welcome!</h1>
-            <p>Hi, and welcome to my site! Thanks for giving it a look. Feel free to poke around!</p>
-        </main>
-    </div>
-    
+    <header>
+        <h1>Welcome!</h1>
+    </header>
+    <main>
+        <nav class="navigation"></nav>
+        <p>Hi, and welcome to my site! Thanks for giving it a look. Feel free to poke around!</p>
+    </main>
+    <footer></footer>
 </body>
 </html>
 
