--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navigation"></nav>
         <p>Hi, and welcome to my site! Thanks for giving it a look. Feel free to poke around!</p>
     </main>
-    <footer></footer>
+    <footer>Daniel Checketts</footer>
 </body>
 </html>
 
