Add filter/sort UI and improve main content structure
Introduces filter and sort dropdowns to the header for better post navigation. Updates home page markup to wrap content in a <main> element and adjusts HTMX swap behavior for improved interactivity. README updated to note Tailwind and HTMX usage.

--- a/src/header.html
+++ b/src/header.html
@@ -9,6 +9,24 @@ permalink: /header.html
             <a href="#" class="text-xl font-bold">Vibe Coding</a>
         </div>
 
+        <div>
+            <select name="filter" id="filter" class="border-black border-solid rounded-lg">
+                <option value="default">Filter</option>
+                <option value="HTML">HTML</option>
+                <option value="CSS">CSS</option>
+                <option value="JavaScript">JavaScript</option>
+                <option value="Python">Python</option>
+                <option value="Misc">Misc</option>
+            </select>
+            <select name="sort" id="sort">
+                <option value="default-sort">Sort</option>
+                <option value="alphabetical">Alphabetical</option>
+                <option value="alphabetical-reverse">Alphabetical Reverse</option>
+                <option value="date">Date</option>
+                <option value="date-reverse">Date Reverse</option>
+            </select>
+        </div>
+
         <div id="main-nav" class="flex space-x-4">
 
             <a href="/" class="text-gray-600 hover:text-black">
