--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@ title: Vibe Coding
 <main id="content"
     hx-get="/pages/home.html"
     hx-trigger="load"
-    hx-swap="innerHTML">
+    hx-swap="outerHTML">
     <p>Content loading...</p>
 </main>
 <footer
