--- a/src/header.html
+++ b/src/header.html
@@ -33,7 +33,7 @@ permalink: /header.html
                 Home
             </a>
 
-            <a href="/about/" 
+            <a href="/about/" class="text-gray-600 hover:text-black"
             hx-get="/about/" 
             hx-target="#content" 
             hx-select="#content">
