Refactor layout and improve post linking
Moved header and footer loading to base layout for consistency. Updated home page to wrap post titles in links for better navigation. Renamed 'first-post.md' to 'cosy-isnt-it.md' and updated its content. Commented out unused filter dropdown in header.

--- a/src/header.html
+++ b/src/header.html
@@ -9,7 +9,7 @@ permalink: /header.html
             <a href="#" class="text-xl font-bold">Vibe Coding</a>
         </div>
 
-        <div>
+        <!-- <div>
             <select name="filter" id="filter" class="border-black border-solid rounded-lg">
                 <option value="default">Filter</option>
                 <option value="HTML">HTML</option>
@@ -25,7 +25,7 @@ permalink: /header.html
                 <option value="date">Date</option>
                 <option value="date-reverse">Date Reverse</option>
             </select>
-        </div>
+        </div> -->
 
         <div id="main-nav" class="flex space-x-4">
 
