--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -9,10 +9,11 @@ permalink: /pages/home.html
 
         {%- for post in collections.posts -%}
         <div class="bg-white p-4 border rounded-lg shadow">
-            <h2 class="text-2xl font-bold">{{ post.data.title }}</h2>
+            <a href="{{ post.url }}">
+                <h2 class="text-2xl font-bold">{{ post.data.title }}</h2>
             <p class="text-gray-600">{{ post.data.description }}</p>
             <p class="text-sm mt-2">Tags: {{ post.data.tags | join(", ") }}</p>
-            <a href="{{ post.url }}" class="text-blue-600">Read more...</a>
+            </a>            
         </div>
         {%- endfor -%}
 
