Add Tailwind CSS and update build dependencies
Introduced Tailwind CSS and related dependencies (autoprefixer, postcss) in package.json and package-lock.json. Added input.css for Tailwind styles and updated HTML templates to include the generated CSS.

--- a/src/header.html
+++ b/src/header.html
@@ -40,6 +40,11 @@ permalink: /header.html
                 About
             </a>
 
+            <a href="#" class="text-gray-600 hover:text-black"
+            hx-get="/now/"
+            hx-target="#content"
+            hx-select="#content">Now</a>
+
             <a href="{{ newestPost.url }}" class="text-gray-600 hover:text-black"
             hx-get="{{ newestPost.url }}"
             hx-target="#content"
