Ran npm run tidy
I forgot that the github action acts as a gatekeeper

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,29 @@
   </head>
   <body>
     <header></header>
-    <main class=" pt-10">
-      <h2 class="text-4xl font-bold mx-auto max-w-fit mb-5">Welcome!</h2>
+    <main class="pt-10">
+      <h2 class="mx-auto mb-5 max-w-fit text-4xl font-bold">Welcome!</h2>
       <section id="about-site">
-        <p>This site was built using a template that I designed. You can take a look at that template <a href="https://github.com/dchecketts/vite-site-template" class="underline hover:text-green-700" target="_blank" rel="noopener noreferrer">here</a>. I love web development, but sometimes CSS can get messy, and so I use <a href="#" class="underline hover:text-green-700" target="_blank" rel="noopener noreferrer">Tailwind's</a> utility classes to style things here.</p>
+        <p>
+          This site was built using a template that I designed. You can take a
+          look at that template
+          <a
+            href="https://github.com/dchecketts/vite-site-template"
+            class="underline hover:text-green-700"
+            target="_blank"
+            rel="noopener noreferrer"
+            >here</a
+          >. I love web development, but sometimes CSS can get messy, and so I
+          use
+          <a
+            href="#"
+            class="underline hover:text-green-700"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Tailwind's</a
+          >
+          utility classes to style things here.
+        </p>
       </section>
     </main>
     <footer></footer>
